list and delete shorten urls
